--- a/MixedDbDistributionTask/MixedDbDistributionTask.csproj
+++ b/MixedDbDistributionTask/MixedDbDistributionTask.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Grpc" Version="2.46.6" />
     <PackageReference Include="Grpc.AspNetCore" Version="2.64.0" />
+    <PackageReference Include="Grpc.AspNetCore.Web" Version="2.71.0" />
+    <PackageReference Include="Grpc.Net.Client.Web" Version="2.71.0" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.8" />
   </ItemGroup>
 
