frontend master database creation

--- a/MixedDbDistributionGrpcClient/MixedDbDistributionGrpcClient.csproj
+++ b/MixedDbDistributionGrpcClient/MixedDbDistributionGrpcClient.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <Protobuf Include="Protos\accessor.proto" GrpcServices="Client" />
+    <Protobuf Include="Protos\databases.proto" GrpcServices="Client" />
   </ItemGroup>
 
 </Project>
