removes database, cleans up the solution for "publishing"

--- a/MixedDbDistributionTask/appsettings.json
+++ b/MixedDbDistributionTask/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqliteMasterDeb": "D:\\simonssoftware\\csharp\\MixedDbDistributionTask\\MixedDbDistributionTask"
+    "SqliteDbPath": ""
   }
 }
